adding .ONION support

--- a/my/locales/fr_FR/LC_MESSAGES/messages.po
+++ b/my/locales/fr_FR/LC_MESSAGES/messages.po
@@ -64,7 +64,7 @@ msgid ""
 "a non-mandatory email address which will allow you to change your password "
 "if you lose it later."
 msgstr ""
-"Si vous souhaitez créer un compte sur ce seruver Jabber, merci d'entrer un "
+"Si vous souhaitez créer un compte sur ce serveur Jabber, merci d'entrer un "
 "nom d'utilisateur et un mot de passe (deux fois), dans le formulaire ci-"
 "dessous. Vous pouvez aussi saisir une adresse email (facultative) qui vous "
 "permettra de modifier votre mot de passe plus tard si vous le perdez."
